--- a/styles/item.less
+++ b/styles/item.less
@@ -29,7 +29,15 @@
         }
     }
 
-    &.armor {
+    &.armor,
+    &.weapon,
+    &.beastform,
+    &.consumable,
+    &.subclass,
+    &.miscellaneous,
+    &.domain-card,
+    &.community,
+    &.ancestry {
         .window-content {
             display: flex;
             flex-direction: column;
