make items from inventory draggable

--- a/templates/sheets/global/partials/inventory-item.hbs
+++ b/templates/sheets/global/partials/inventory-item.hbs
@@ -1,4 +1,4 @@
-<li class="inventory-item" data-item-id="{{item.id}}" data-item-uuid="{{item.uuid}}" data-type="{{type}}">
+<li class="inventory-item" data-item-id="{{item.id}}" data-item-uuid="{{item.uuid}}" data-type="{{type}}" draggable="true">
     <img src="{{item.img}}" class="item-img {{#if isActor}}actor-img{{/if}}" data-action="useItem" {{#if (not noTooltip)}}data-tooltip="{{concat "#item#" item.uuid}}"{{/if}} />
     <div class="item-label">
         {{#if isCompanion}}
