--- a/templates/sheets/activeEffect/details.hbs
+++ b/templates/sheets/activeEffect/details.hbs
@@ -7,14 +7,7 @@
     {{formGroup fields.origin value=source.origin rootId=rootId disabled=true}}
     {{/if}}
     {{#if isItemEffect}}
-    {{formGroup fields.transfer value=source.transfer rootId=rootId label=legacyTransfer.label hint=legacyTransfer.hint}}
-    
-    {{!-- Attachment-only flag for item effects TODO figure out how to do this with formGroups--}}
-    <div class="form-group">
-        <label for="{{rootId}}-attachmentOnly">{{localize "DAGGERHEART.Effect.AttachmentOnly.Label"}}</label>
-        <input type="checkbox" id="{{rootId}}-attachmentOnly" name="flags.daggerheart.attachmentOnly" {{#if source.flags.daggerheart.attachmentOnly}}checked{{/if}}>
-        <p class="hint">{{localize "DAGGERHEART.Effect.AttachmentOnly.Hint"}}</p>
-    </div>
+    {{formGroup fields.transfer value=source.transfer rootId=rootId label=legacyTransfer.label hint=(localize "DAGGERHEART.EFFECTS.Attachments.transferHint")}}
     {{/if}}
 
     {{formGroup fields.statuses value=source.statuses options=statuses rootId=rootId classes="statuses"}}
